added favicon and metadata tag

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Simple Tribute Web Page for Maroon 5">
+    <meta name="keywords" content="tribute page, maroon 5">
+    <meta name="author" content="Andrey Quagliato">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
-    <title>Maroon 5 Tribute</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/1619742528.ico" type="image/x-icon">
+    <title>Maroon 5 | Tribute Page</title>
 </head>
 <body>
     <main id="main">
@@ -37,7 +41,7 @@
                 </nav>
             <div id="img-div">
                 <figure>
-                    <img src="/src/images/maroon5_album.jpg" alt="The 'V' album of Maroon 5" id="image">
+                    <img src="images/maroon5_album.jpg" alt="The 'V' album of Maroon 5" id="image">
                     <figcaption id="img-caption">Maroon 5 "V" album</figcaption>
                 </figure>
             </div>
@@ -58,22 +62,22 @@
                 <h2>Galeria</h2>
                 <div class="images">
                     <article>
-                        <img src="/src/images/IMG_3841.jpg" loading="lazy" alt="guitarist playing on stage">
+                        <img src="images/IMG_3841.jpg" loading="lazy" alt="guitarist playing on stage">
                     </article>
                     <article>
-                        <img src="/src/images/IMG_3877.jpg" loading="lazy" alt="singer on stage pointing his left finger ">
+                        <img src="images/IMG_3877.jpg" loading="lazy" alt="singer on stage pointing his left finger ">
                     </article>
                     <article>
-                        <img src="/src/images/IMG_4474.jpg" loading="lazy" alt="Maroon 5 members walking in a corridor (black and white photo)">
+                        <img src="images/IMG_4474.jpg" loading="lazy" alt="Maroon 5 members walking in a corridor (black and white photo)">
                     </article>
                     <article>
-                        <img src="/src/images/IMG_4546.jpg" loading="lazy" alt="drummer on stage for thousands of people">
+                        <img src="images/IMG_4546.jpg" loading="lazy" alt="drummer on stage for thousands of people">
                     </article>
                     <article>
-                        <img src="/src/images/IMG_4698.jpg" loading="lazy" alt="Maroon 5 member on stage singing to thousands of people (two lights are pointed at him)">
+                        <img src="images/IMG_4698.jpg" loading="lazy" alt="Maroon 5 member on stage singing to thousands of people (two lights are pointed at him)">
                     </article>
                     <article>
-                        <img src="/src/images/IMG_4948.jpg" loading="lazy" alt="keyboardist on stage">
+                        <img src="images/IMG_4948.jpg" loading="lazy" alt="keyboardist on stage">
                     </article>
                 </div>
             </section>
